# ipymlwidgets

./: .gitignore  .pre-commit-config.yaml  image.py  pyproject.toml  utils.py
notebooks/: demo_image.ipynb  demo_image_grid.ipynb  demo_object_annotate.ipynb  demo_ocr.ipynb  grounding_dino.ipynb  test.ipynb  test_anywidgets.ipynb  test_list.ipynb  test_widgets.ipynb
src/ipymlwidgets/: __init__.py  demo.py  image_utils.py  utils.py
src/ipymlwidgets/annotate/: __init__.py  object_annotate.py
src/ipymlwidgets/auto/: __init__.py  grounding_dino.py
src/ipymlwidgets/models/torch/: grounding_dino.py
src/ipymlwidgets/static/: canvas.js
src/ipymlwidgets/traits/: __init__.py  layout.py  link.py  tensor.py
src/ipymlwidgets/widgets/: __init__.py  box_overlay.py  box_widget.js  box_widget.py  button.py  canvas.js  canvas.py  image.py  image_annotate.py  image_annotated.py  image_ocr.py  text.py
src/ipymlwidgets/widgets/DEP/: box_overlay.py  image.py  image_annotated.py  image_ocr.py
src/ipymlwidgets/widgets/canvas/: __init__.py  canvas.js  canvas.py
src/ipymlwidgets/widgets/container/: __init__.py  box.py
src/ipymlwidgets/widgets/image/: __init__.py  image.py  image_annotate.py  image_grid.py
src/ipymlwidgets/widgets/ocr/: __init__.py  item.py
types/: __init__.py  convert.py  hints.py  namespace.py
widgets/: __init__.py  iconextractor.py  image.py  swatch.py
